--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Catalyst::ActionRole::QueryParameter
 
+0.08    29 September 2015
+        - Let a parameter be optional: "QueryParameter(?page:Int)"
+        - Let a parameter define a default "QueryParameter(page=1:Int)"
+
 0.07    20 November 2015
         - Fixes from reported issues (contributors++)
         - Migration to Dist::Zilla
